data/derived/comb/progs/unify/prog3444.ml.out
Characters 112-113:
  | Sine s -> "sin(pi*" ^ Format.printf "%expr" s  ^ ")";;
                                                ^
Error: This expression has type expr but an expression was expected of type
         float
